# Dotio

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp  vcpkg.json
app/include/: utility.h
app/internal/: pch.h
app/src/: utility.cpp
gamef/: CMakeLists.txt  vcpkg.json
gamef/include/: direct2d_renderer.h  game.h  mouse.h  renderer.h  utility.h  window.h
gamef/internal/: pch.h
gamef/src/: direct2d_renderer.cpp  game.cpp  mouse.cpp  renderer.cpp  utility.cpp  window.cpp
gmath/: CMakeLists.txt  vcpkg.json
gmath/include/: gmath.h
gmath/internal/: pch.h
gmath/src/: gmath.cpp
gmath/tests/: main.cpp
gmath/tests/include/: angle_tests.h
logic/: .gitignore  CMakeLists.txt  vcpkg.json
logic/include/: arrow.h  bolt.h  enemy.h  fuzzy.h  graph.h  grid.h  moving_object.h  physics_object.h  player.h  priority_queue.h  stack.h  state.h  static_object.h  tracker.h  vertex.h  world.h
logic/internal/: pch.h
logic/src/: arrow.cpp  bolt.cpp  enemy.cpp  fuzzy.cpp  graph.cpp  grid.cpp  moving_object.cpp  physics_object.cpp  player.cpp  priority_queue.cpp  stack.cpp  state.cpp  static_object.cpp  vertex.cpp  world.cpp
